cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0
synopsis:           Learning Haskell by building a static blog generator
license:            BSD-3-Clause
author:             Dylan Foster
maintainer:         dylantf@gmail.com
build-type:         Simple
extra-source-files:
    README.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall
    default-extensions:
        ImportQualifiedPost
        LambdaCase

library
    import:           common-settings
    exposed-modules:  
        HsBlog
        HsBlog.Convert
        HsBlog.Html
        HsBlog.Html.Internal
        HsBlog.Markup
        HsBlog.Env
    build-depends:   
        base,
        directory,
        filepath,
        mtl
    hs-source-dirs:   src

executable hs-blog
    import:           common-settings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
        OptParse
    build-depends:
        base,
        optparse-applicative,
        directory,
        filepath,
        mtl,
        hs-blog
    ghc-options:
        -O    
